fix impersonate swagger to tag impersonate
